fixed bug where background image was visible in all views

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@ h2 {
   margin-top: 0;
 }
 
-body {
+.background-image {
   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), image-url('bg1.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
